# paginate

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: checks.yml  tests.yml
src/paginate/: __init__.py  page_params.py  paginate.py  paginated_response.py
tests/: conftest.py  factories.py  test_paginate.py
tests/paginate/: test_paginate.py
