[project]
name = "paginate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jordi Urios", email = "jordi@kodilab.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"
