[project]
name = "paginate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jordi Urios", email = "jordi@kodilab.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.0",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
