[project]
name = "paginate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jordi Urios", email = "jordi@kodilab.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.51",
]

[project.optional-dependencies]
sqlmodel = ["sqlmodel>=0.0.39"]

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "sqlmodel>=0.0.39",
]
